Minor fixes for clipping visualizations

--- a/Prototype/resources/problem_solving.css
+++ b/Prototype/resources/problem_solving.css
@@ -179,7 +179,6 @@
     display: inline-flex;
     border-left: 1px dashed lightblue;
     float: right;
-    width: 39%;
     padding: 5px;
 }
 
